Fixes the spacing issue below the nav bar

--- a/wp-content/themes/multunus/sass/custom/_community.scss
+++ b/wp-content/themes/multunus/sass/custom/_community.scss
@@ -1,5 +1,7 @@
 #community {
 
+  margin-top: 30px;
+
   #community-love {
     h1 { font-size: 4rem; }
   }
