--- a/wp-content/themes/multunus/sass/custom/_header.scss
+++ b/wp-content/themes/multunus/sass/custom/_header.scss
@@ -1,3 +1,8 @@
+.navbar {
+  margin-bottom: 0;
+  border: 0;
+}
+
 .navbar-default {
   .navbar-nav > .active > a {
     color: white;
