--- a/wp-content/themes/multunus/sass/custom/_team.scss
+++ b/wp-content/themes/multunus/sass/custom/_team.scss
@@ -1,3 +1,7 @@
+.quote-header {
+  margin-top: 30px;
+}
+
 .overflow-fix {
   // team detail: grey background stretches to full with
   // hides horizontal scrollbars
